# sage-engine

./: .gitignore  .gitmodules  CMakeLists.txt
AppSandbox/src/: SandboxApp.cpp
Sage/: CMakeLists.txt
Sage/include/: Sage.hpp  Sagepch.hpp
Sage/include/Sage/: Application.hpp  Core.hpp  EntryPoint.hpp  Log.hpp  Window.hpp
Sage/include/Sage/Events/: ApplicationEvent.hpp  Event.hpp  KeyboardEvent.hpp  MouseEvent.hpp
Sage/include/Sage/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
Sage/src/: Sage.h  Sage.hpp  Sagepch.cpp
Sage/src/SageCore/: Application.cpp  Application.h  Application.hpp  Core.hpp  EntryPoint.h  Log.cpp  Log.h
SandboxApp/: CMakeLists.txt
SandboxApp/src/: SandboxApp.cpp
